monitoring/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus
spec:
  rules:
  - host: prometheus.ns.wg 
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
